:art: change main color to ikb

--- a/index.html
+++ b/index.html
@@ -159,8 +159,9 @@
                             <li>snap-svg (animation svg)</li>
                             <li>intégration cms (wordpress, drupal)</li>
                             <li>babylonjs (webgl)</li>
-                            <li>git, svn</li>
-                            <li>grunt, webpack</li>
+                            <li>python (django)</li>
+                            <li>git</li>
+                            <li>gulp, webpack</li>
                         </ul>
                     </div>
                 </div>
