add arrow hover

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                                     <div>
                                         <span><span class="bold">Drieux-Combaluzier</span> - 10 Bonnes Raisons de Nous Choisir</span>
                                     </div>
+                                    <span class="icon icon icon-arrow-right"></span>
                                 </div>
                             </a>
                             <a href="https://www.dod.fr/index.html" target="_blank" class="portfolio-item">
@@ -66,6 +67,7 @@
                                     <div>
                                         <span><span class="bold">DOD</span> - Produits de décoration, bricolage et entretien</span>
                                     </div>
+                                    <span class="icon icon icon-arrow-right"></span>
                                 </div>
                                 <div class="ct-img">
                                     <img src="./assets/img/moke-up.png" alt="img-right" class="img-responsive">
@@ -93,6 +95,7 @@
                                     <div>
                                         <span><span class="bold">Animation SVG</span> - Menu dynamique vectoriel</span>
                                     </div>
+                                    <span class="icon icon icon-arrow-right"></span>
                                 </div>
                             </a>
                             <a href="waterdrop.html" target="_blank" class="portfolio-item">
@@ -100,6 +103,7 @@
                                     <div>
                                         <span><span class="bold">Animation WEBGL</span> - Demo technique webgl</span>
                                     </div>
+                                    <span class="icon icon icon-arrow-right"></span>
                                 </div>
                                 <div class="ct-img">
                                     <img src="./assets/img/moke-up.png" alt="img-left" class="img-responsive">
@@ -127,6 +131,7 @@
                                     <div>
                                         <span><span class="bold">WEBGL</span> - Configurateur piscine</span>
                                     </div>
+                                    <span class="icon icon icon-arrow-right"></span>
                                 </div>
                             </a>
                         </div>
