refacto remove jquery

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
                     <svg version="1.1" class="decoupe-header dec" fill="#f5f5f5" x="0px" y="0px" viewBox="0 0 500 42.5" enable-background="new 0 0 500 42.5" xml:space="preserve" preserveAspectRatio="none">
                         <polygon points="500,42.5 0,42.5 500,0 "/>
                     </svg>
-                    <svg class="decoupe-triangle bot"></svg>
-                    <span class="icon icon-arrow-bot"></span>
+                    <div class="event-scroll-arrow">
+                        <svg class="decoupe-triangle bot"></svg>
+                        <span class="icon icon-arrow-bot"></span>
+                    </div>
                 </div>
                 <div class="section black portfolio" id="portfolio">
                     <div class="container">
@@ -42,7 +44,7 @@
                             </h2>
                             <svg class="title-anim title-anim-1"></svg>
                         </section>
-                        <p class="first">Développeur front-end / intégrateur depuis bientôt 3 ans j'ai accumulé les expériences, voici un quelques-uns des projets sur lesquels j'ai eu l'occasion de travailler. Je suis curieux et j'aime la nouveauté, j'ai aussi l'occasion d'expérimenter sur mon temps libre.</p>
+                        <p class="first">Développeur front-end / intégrateur depuis trois ans et demi, j'ai accumulé les expériences, voici un quelques-uns des projets sur lesquels j'ai eu l'occasion de travailler. Je suis curieux et j'aime la nouveauté, j'ai aussi l'occasion d'expérimenter sur mon temps libre.</p>
                         <div class="container-portfolio-items">
                             <a href="https://www.drieux-combaluzier.com/longread/10-bonnes-raisons-drieux-combaluzier" target="_blank" class="portfolio-item">
                                 <div class="ct-img">
@@ -191,7 +193,6 @@
         </main>
     </div>
     <script src="./assets/js/snap.svg-min.0.5.js"></script>
-    <script src="./assets/js/jquery-3.1.1.min.js"></script>
     <script src="./assets/js/babylon.custom.js"></script>
     <script src="./assets/js/main.js"></script>
     <script>
