feature/add-iss-app

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                 </div>
                                 <div class="ct-txt">
                                     <div>
-                                        <span><span class="bold">Animation SVG</span> - Menu dynamique vectoriel</span>
+                                        <span><span class="bold">SVG</span> - Menu dynamique vectoriel</span>
                                     </div>
                                     <span class="icon icon icon-arrow-right"></span>
                                 </div>
@@ -103,7 +103,7 @@
                             <a href="waterdrop.html" target="_blank" class="portfolio-item">
                                 <div class="ct-txt">
                                     <div>
-                                        <span><span class="bold">Animation WEBGL</span> - Demo technique webgl</span>
+                                        <span><span class="bold">BABYLONJS</span> - Demo technique webgl</span>
                                     </div>
                                     <span class="icon icon icon-arrow-right"></span>
                                 </div>
@@ -131,9 +131,27 @@
                                 </div>
                                 <div class="ct-txt">
                                     <div>
-                                        <span><span class="bold">WEBGL</span> - Configurateur piscine</span>
+                                        <span><span class="bold">BABYLONJS</span> - Configurateur piscine</span>
                                     </div>
                                     <span class="icon icon icon-arrow-right"></span>
+                                </div>
+                            </a>
+                            <a href="iss.html" target="_blank" class="portfolio-item">
+                                <div class="ct-txt">
+                                    <div>
+                                        <span><span class="bold">THREEJS</span> - Configurateur piscine</span>
+                                    </div>
+                                    <span class="icon icon icon-arrow-right"></span>
+                                </div>
+                                <div class="ct-img">
+                                    <img src="./assets/img/moke-up.png" alt="img-left" class="img-responsive">
+                                    <div class="ct-overlay">
+                                        <video preload="auto" loop muted autoplay>
+                                            <source src="./assets/video/capture-iss.mp4" type="video/mp4" />
+                                            <source src="./assets/video/capture-iss.webm" type="video/webm" />
+                                            <source src="./assets/video/capture-iss.ogg" type="video/ogg" />
+                                        </video>
+                                    </div>
                                 </div>
                             </a>
                         </div>
@@ -154,7 +172,7 @@
                             <svg class="title-anim title-anim-2"></svg>
                         </section>
                         <p class="first">Après un BTS dans le print et un passage par les beaux-arts, je me suis orienté vers un cursus web et multimédia en Licence pro à La Rochelle. J’ai été accueilli chez Gingerminds en tant que stagiaire puis comme employé. Je collabore avec des équipes créatives et de dev back avec qui j’ai eu l’occasion de travailler sur des projets variés. Mon expérience s’étend de sites vitrines, e-commerce à des sites/applications métier.</p>
-                        
+
                         <p>Voici une sélection de technologies pertinentes avec lesquelles j'ai de l'expérience :</p>
                         <ul class="tools-list">
                             <li>html5</li>
@@ -166,7 +184,7 @@
                             <li>snap-svg (animation svg)</li>
                             <li>intégration cms (wordpress, drupal)</li>
                             <li>babylonjs (webgl)</li>
-                            <li>python (django)</li>
+                            <li>bases python (django)</li>
                             <li>git</li>
                             <li>gulp, webpack</li>
                         </ul>
