--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             <a href="iss.html" target="_blank" class="portfolio-item">
                                 <div class="ct-txt">
                                     <div>
-                                        <span><span class="bold">THREEJS</span> - Configurateur piscine</span>
+                                        <span><span class="bold">THREEJS</span> - ISS</span>
                                     </div>
                                     <span class="icon icon icon-arrow-right"></span>
                                 </div>
